added the mainpage content andtoggle

--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,11 @@
 
+/*
 html body{
   min-height: 100%;
   min-width: 100%;
     font-family: 'Lato', sans-serif;
 }
+*/
 
 html body input[type="checkbox"] {
   position: absolute;
@@ -110,18 +112,14 @@ html body section.menu nav a:nth-child(7) {
   -webkit-transition-delay: .25s;
   transition-delay: .025s;
 }
-html body section.content {
+.content {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  min-height: 100%;
   min-width: 100%;
   display: table;
-  background: #e23d3d;
+
 }
-html body section.content label {
+
+.content label {
   position: fixed;
   z-index: 1000;
   padding: 1rem 1.5rem;
@@ -131,11 +129,43 @@ html body section.content label {
   color: #fff;
   cursor: pointer;
 }
-html body section.content h1 {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-  font-size: 3rem;
-  letter-spacing: 1px;
-  color: #fff;
+
+
+
+/*CONTENT AREA*/
+.container {
+  width: 100%;
 }
+
+/* Main */
+.main {
+  background: url('https://s3.amazonaws.com/codecademy-content/projects/move/bg.jpg');
+  background-size: center;
+  color: white;
+  height: 600px;
+  margin-top: 0;
+  text-align: center;
+}
+
+.main h1 {
+  font-size: 150px;
+  text-transform: uppercase;
+  margin: 0px;
+	padding: 50px 0 0 0;
+}
+
+.main p {
+  font-size: 18px;
+  margin: 0px;
+	padding: 0 0 20px 0;
+}
+
+.btn-start {
+	background-color: #1c1c1c;
+	font-size: 18px;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 6px 25px;
+ 
+}
+
