--- a/css/app.css
+++ b/css/app.css
@@ -51,19 +51,19 @@ html body input[type="checkbox"]:checked ~ .menu nav a:nth-child(8) {
   -webkit-transition-delay: .7s;
   transition-delay: 0.7s;
 }
-html body section.menu {
+.menu {
   position: fixed;
   z-index: 10;
   top: 0;
   bottom: 0;
   min-height: 100%;
 }
-html body section.menu nav {
+.menu nav {
   padding-top: 4rem;
   -webkit-perspective: 20rem;
   perspective: 20rem;
 }
-html body section.menu nav a {
+.menu nav a {
   display: block;
   width: 12rem;
   padding: 1.25rem 0rem 1.25rem 1.75rem;
@@ -74,7 +74,6 @@ html body section.menu nav a {
   letter-spacing: 1.5px;
   font-weight: 300;
   font-size: 1.25rem;
-  text-decoration: none;
   -webkit-transform: translate3d(-100%, 0, 0) rotateY(90deg);
   transform: translate3d(-100%, 0, 0) rotateY(90deg);
   -webkit-transform-origin: 0% 50%;
@@ -84,31 +83,31 @@ html body section.menu nav a {
   -webkit-transition: all .25s ease-in-out;
   transition: all .25s ease-in-out;
 }
-html body section.menu nav a:nth-child(1) {
+.menu nav a:nth-child(1) {
   -webkit-transition-delay: .235s;
   transition-delay: .235s;
 }
-html body section.menu nav a:nth-child(2) {
+.menu nav a:nth-child(2) {
   -webkit-transition-delay: .2s;
   transition-delay: .2s;
 }
-html body section.menu nav a:nth-child(3) {
+.menu nav a:nth-child(3) {
   -webkit-transition-delay: .165s;
   transition-delay: .165s;
 }
-html body section.menu nav a:nth-child(4) {
+.menu nav a:nth-child(4) {
   -webkit-transition-delay: .13s;
   transition-delay: .13s;
 }
-html body section.menu nav a:nth-child(5) {
+.menu nav a:nth-child(5) {
   -webkit-transition-delay: .095s;
   transition-delay: .095s;
 }
-html body section.menu nav a:nth-child(6) {
+.menu nav a:nth-child(6) {
   -webkit-transition-delay: .06s;
   transition-delay: .06s;
 }
-html body section.menu nav a:nth-child(7) {
+.menu nav a:nth-child(7) {
   -webkit-transition-delay: .25s;
   transition-delay: .025s;
 }
@@ -133,9 +132,7 @@ html body section.menu nav a:nth-child(7) {
 
 
 /*CONTENT AREA*/
-.container {
-  width: 100%;
-}
+
 
 /* Main */
 .main {
@@ -162,8 +159,8 @@ html body section.menu nav a:nth-child(7) {
 
 .btn-start {
 	background-color: #1c1c1c;
+    border-radius: 15px;
 	font-size: 18px;
-  text-decoration: none;
   text-transform: uppercase;
   padding: 6px 25px;
  
