--- a/partey/partey/templates/swingtime/add_event.html
+++ b/partey/partey/templates/swingtime/add_event.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Add Event{% endblock %}
 {% block main_content %}
+{% include "event_nav.html" %}
     <h3>Add Event</h3>
     {{ event_form.non_field_errors }}
     {{ recurring_form.non_field_errors }}
