--- a/partey/partey/templates/swingtime/daily_view.html
+++ b/partey/partey/templates/swingtime/daily_view.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Daily View{% endblock %}
 {% block main_content %}
+{% include "event_nav.html" %}
     <h3>Daily View</h3>
     <h4>
         <a class="plain" href="{% url 'swingtime-daily-view' prev_day.year prev_day.month prev_day.day %}">&larr;</a>
