--- a/partey/partey/templates/swingtime/event_detail.html
+++ b/partey/partey/templates/swingtime/event_detail.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Event: {{ event }}{% endblock %}
 {% block main_content %}
-    <h3>Swingtime Event</h3>
+{% include "event_nav.html" %}
+    <h3>Event</h3>
     <h4>Event Details</h4>
     <form action="" method="post">
     <table>
