--- a/partey/partey/templates/swingtime/monthly_view.html
+++ b/partey/partey/templates/swingtime/monthly_view.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Monthly View{% endblock %}
 {% block main_content %}
+{% include "event_nav.html" %}
     <h3>Monthly View</h3>
     <h4>
         <a href="{% url 'swingtime-monthly-view' last_month.year last_month.month %}" 
