--- a/partey/partey/templates/swingtime/yearly_view.html
+++ b/partey/partey/templates/swingtime/yearly_view.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Yearly View {{ year }}{% endblock %}
 {% block main_content %}
+{% include "event_nav.html" %}
     <h3>
         <a href="{% url 'swingtime-yearly-view' last_year %}" 
            title="Last Month">&larr;</a>
