--- a/partey/partey/templates/swingtime/event_detail.html
+++ b/partey/partey/templates/swingtime/event_detail.html
@@ -4,7 +4,8 @@
 {% include "event_nav.html" %}
     <h3>Event</h3>
     <h4>Event Details</h4>
-    <form action="" method="post">
+    <form method="post" action="">
+    {% csrf_token %}
     <table>
         <tfoot>
             <tr>
