--- a/partey/partey/static/css/app.css
+++ b/partey/partey/static/css/app.css
@@ -1,6 +1,6 @@
 
 
-.main-container html body input[type="checkbox"] {
+.main-container  input[type="checkbox"] {
   position: absolute;
   height: 0;
   width: 0;
@@ -9,7 +9,7 @@
 .main-container .menu nav a:nth-child(1) {
      margin-top: 5%;
 }
-.main-container html body input[type="checkbox"]:checked ~ .menu nav a {
+.main-container  input[type="checkbox"]:checked ~ .menu nav a {
        
   -webkit-transform: translate3d(0px, 0, 0) rotateY(0deg);
   transform: translate3d(0px, 0, 0) rotateY(0deg);
@@ -20,31 +20,31 @@
   background: #452B00;
   color: #fff;
 }
-.main-container html body input[type="checkbox"]:checked ~ .menu nav a:nth-child(2) {
+.main-container  input[type="checkbox"]:checked ~ .menu nav a:nth-child(2) {
   -webkit-transition-delay: .1s;
   transition-delay: .1s;
 }
-.main-container html body input[type="checkbox"]:checked ~ .menu nav a:nth-child(3) {
+.main-container  input[type="checkbox"]:checked ~ .menu nav a:nth-child(3) {
   -webkit-transition-delay: .2s;
   transition-delay: .2s;
 }
-.main-container html body input[type="checkbox"]:checked ~ .menu nav a:nth-child(4) {
+.main-container  input[type="checkbox"]:checked ~ .menu nav a:nth-child(4) {
   -webkit-transition-delay: .3s;
   transition-delay: 0.3s;
 }
-.main-container html body input[type="checkbox"]:checked ~ .menu nav a:nth-child(5) {
+.main-container  input[type="checkbox"]:checked ~ .menu nav a:nth-child(5) {
   -webkit-transition-delay: .4s;
   transition-delay: .4s;
 }
-.main-container html body input[type="checkbox"]:checked ~ .menu nav a:nth-child(6) {
+.main-container  input[type="checkbox"]:checked ~ .menu nav a:nth-child(6) {
   -webkit-transition-delay: .5s;
   transition-delay: 0.5s;
 }
-.main-container html body input[type="checkbox"]:checked ~ .menu nav a:nth-child(7) {
+.main-container  input[type="checkbox"]:checked ~ .menu nav a:nth-child(7) {
   -webkit-transition-delay: .6s;
   transition-delay: 0.6s;
 }
-.main-container html body input[type="checkbox"]:checked ~ .menu nav a:nth-child(8) {
+.main-container  input[type="checkbox"]:checked ~ .menu nav a:nth-child(8) {
   -webkit-transition-delay: .7s;
   transition-delay: 0.7s;
 }
@@ -109,7 +109,7 @@
   transition-delay: .025s;
 }
 .content {
-  position: absolute;
+  position: relative;
   min-width: 100%;
   display: table;
 
