--- a/partey/partey/static/css/events.css
+++ b/partey/partey/static/css/events.css
@@ -16,6 +16,13 @@ h6{
 .event-container{
 	background: #1c1c1c;
 	min-height: 100vh;
+	/*margin: 1em auto;
+    width: 950px;
+    padding: 1em 60px 60px 60px;
+    border: 1px solid #999;
+    border-radius: 6px;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0,.25);
+    background: #1c1c1c ;*/
 }
 thead{
 	background-color: #ffa800;
