--- a/partey/partey/templates/swingtime/event_detail.html
+++ b/partey/partey/templates/swingtime/event_detail.html
@@ -54,6 +54,7 @@
     
     <h4>Add Occurrences</h4>
     <form action="" method="post">
+    {% csrf_token %}
     <table>
         <tfoot>
             <tr>
